--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="header">
+        <div class="header_left">
+            <img src="/icon/logo.svg" alt="" srcset="">
+        </div>
+        <div class="header_center">
+            <span>Напрямки</span>
+            <span>Про компанію</span>
+            <span>Переваги</span>
+            <span>Етапи роботи</span>
+        </div>
+        <div class="header_right">
+            <div class="header_right-icon">
+                <img src="/icon/Ми в соцмережах_.png" alt="" srcset="">
+                <img src="/icon/phone (1) 1.png" alt="">
+                <span>+380 67661 5415</span>
+            </div>
+        </div>
+    </div>
+    <div class="body"></div>
+    <div class="footer"></div>
     
 </body>
 </html>
