--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -26,8 +29,200 @@
             </div>
         </div>
     </div>
-    <div class="body"></div>
+    <div class="slider">
+        <div class="slider__item">
+            <img src="/image/Банер.png" width="1920px" height="1000" >
+        </div>
+        <div class="slider__item">
+            <img src="/image/Банер(1).png" width="1920px" height="1000" >
+        </div>        
+        <div class="slider__item">
+            <img src="/image/Банер(2).png"width="1920px" height="1000"  >
+        </div>
+    </div>
+    <div class="body">
+        <div class="main__way">
+            <div class="main__way-title">
+                <span>Основні Напрямки</span>
+            </div>
+            <div class="main__way_body">
+                <div class="main__way_body-el">
+                    <div class="main__way-el-num">01</div>
+                    <div class="main__way-el-title">
+                        <span>Дизайн інтер'єру</span>
+                    </div>
+                    <div class="main__way-el-img">
+                        <img src="/image/happy.png" alt="" srcset="">
+                    </div>
+                </div>
+                <div class="main__way_body-el">
+                    <div class="main__way-el-num">02</div>
+                    <div class="main__way-el-title">
+                        <span>Виробництво меблів</span>
+                    </div>
+                    <div class="main__way-el-img">
+                        <img src="/image/Rectangle 3.png" alt="">
+                    </div>
+                </div>
+                <div class="main__way_body-el">
+                    <div class="main__way-el-num">03</div>
+                    <div class="main__way-el-title">
+                        <span>Комплексне меблювання</span>
+                    </div>
+                    <div class="main__way-el-img">
+                        <img src="/image/Rectangle 3-1.png" alt="" srcset="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="greenBackground">
+            <div class="greenBackground-title">
+                <span>Ми забезпечимо вас</span>
+            </div>
+            <div class="greenBackground-text">
+                <div class="greenBackground-top-row">
+                    <div class="top-row-item wardrobe">
+                        <img src="/icon/icons8-wardrobe-50.png" width="49px"   alt="" srcset=""><br>
+                        <span>Меблями</span>
+                    </div>
+                    <div class="top-row-item chandelier">
+                        <img src="/icon/icons8-chandelier-64.png" width="49px"   alt="" srcset=""><br>
+                        <span>Освітленням</span>
+                    </div>
+                    <div class="top-row-item bake">
+                        <img src="/icon/icons8-bake-80.png" width="49px"   alt="" srcset=""><br>
+                        <span>Побутовою технікою</span>
+                    </div>
+                </div>
+                <div class="greenBackground-bottom-row">
+                    <div class="greenBackground-bottom-item">
+                        <div class="bottom-row-item door">
+                            <img src="/icon/icons8-door-closed-50.png" width="49px"   alt="" srcset=""><br>
+                            <span>Дверима</span>
+                        </div>
+                        <div class="bottom-row-item roof">
+                            <img src="/icon/icons8-roof-tiles-80.png" width="49px"   alt="" srcset=""><br>
+                            <span>Стіновими панелями та підлоговим покриттям</span>
+                        </div>
+                        <div class="bottom-row-item light">
+                            <img src="/icon/icons8-light-on-50.png" width="49px"   alt="" srcset=""><br>
+                            <span>Проектуванням</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="underGreenBG">
+            <div class="underGreenBG-big">
+                <div class="underGreenBG-medium left">
+                    <img src="/image/Rectangle 14.png" alt="" srcset="">
+                </div>
+                <div class="underGreenBG-medium center">
+                    <div class="center-top">
+                        <span>Проект Рінго Україна - створений виконувати <br>
+                             об`єктні задачі комплексного меблювання <br> 
+                             житлових та комерційних приміщень. </span>
+                    </div>
+                    <div class="center-bottom">
+                        <div class="center-bottom-left">
+                            <img src="/icon/Крапка.png" alt="">
+                            <span>Наш колектив націлений на результат - <br>
+                                вчасно реалізувати проект на найвищому <br>
+                                рівні. Ми забезпечуємо спокій замовника <br> 
+                                та вирішуємо будь-які задачі</span>
+                        </div>
+                        <div class="center-bottom-right">
+                            <img src="/icon/Крапка.png" alt="">
+                            <span>Рінго найкращий підрядник прораба, <br>
+                                дизайнера, проект-менеджера або <br>
+                                персональний помічник власника бізнесу, <br> 
+                                квартири чи салону</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="underGreenBG-medium right">
+                    <img src="/image/Rectangle 15.png" alt="" srcset="">
+                </div>
+            </div>
+        </div>
+        <div class="advanteges">
+            <div class="advanteges-title">
+                <span>Наші переваги</span>
+            </div>
+            <div class="advanteges-body">
+                <div class="advanteges-line">
+                    <div class="line-side_left">
+                        <span>01</span>
+                    </div>
+                    <div class="line-side_right">
+                        <div class="line_right-title">
+                            <span>Мобільність</span>
+                        </div>
+                        <div class="line_right-text">
+                            <span>Проводимо зустрічі на об`єктах в затишних закладах Києва</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="advanteges-line">
+                    <div class="line-side_left">
+                        <span>02</span>
+                    </div>
+                    <div class="line-side_right">
+                        <div class="line_right-title">
+                            <span>Надійність</span>
+                        </div>
+                        <div class="line_right-text">
+                            <span>Система нашої роботи зосереджена на якості та термінах <br> 
+                                  завершення проекту</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="advanteges-line">
+                    <div class="line-side_left">
+                        <span>03</span>
+                    </div>
+                    <div class="line-side_right">
+                        <div class="line_right-title">
+                            <span>Якість</span>
+                        </div>
+                        <div class="line_right-text">
+                            <span>Виготовляємо виключно з перевірених європейських брендів  </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="advanteges-line">
+                    <div class="line-side_left">
+                        <span>04</span>
+                    </div>
+                    <div class="line-side_right">
+                        <div class="line_right-title">
+                            <span>Професіоналізм</span>
+                        </div>
+                        <div class="line_right-text">
+                            <span>Наша команда - це клуб професіоналів, об`єднаних в одній компанії</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="advanteges-line">
+                    <div class="line-side_left">
+                        <span>05</span>
+                    </div>
+                    <div class="line-side_right">
+                        <div class="line_right-title">
+                            <span>Вигідність</span>
+                        </div>
+                        <div class="line_right-text">
+                            <span>Ми відмовились від шоу-руму та офісу на користь <br> 
+                                  вартості та мобільності</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="footer"></div>
-    
 </body>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="/slick.min.js"></script>
+    <script src="/script.js"></script>
 </html>
