Add input block

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             </div>
         </div>
         <div class="advanteges">
+            <img src="/image/Rectangle 16.png" alt="" srcset="">
             <div class="advanteges-title">
                 <span>Наші переваги</span>
             </div>
@@ -203,11 +204,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="advanteges-line">
-                    <div class="line-side_left">
+                <div class="advanteges-line ">
+                    <div class="line-side_left last">
                         <span>05</span>
                     </div>
-                    <div class="line-side_right">
+                    <div class="line-side_right last">
                         <div class="line_right-title">
                             <span>Вигідність</span>
                         </div>
@@ -217,6 +218,36 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="input-block">
+            <div class="input-left">
+                <div class="input_container">
+                    <div class="input_container-title">
+                        <span>Обговоримо <br> 
+                              ваш проект?</span>
+                    </div>
+                    <div class="input_container-subTitle">
+                        <span>Заповніть форму і найближчим часом <br> 
+                            ми зв'яжемося з вами!</span>
+                    </div>
+                    <div class="input_form">
+                            <input  id= "name" type="text" name="firstname" value="Ім'я"><br>
+                            <input id= "phone" type="text" name="lastname" value="Номер телефону"><br>
+                            <div class="input_text">
+                                <img src="/icon/file (1) 1.png" alt="" srcset="">
+                                <span>Прикріпити проект</span>
+                            </div><br>
+                            <input id="btn" type="submit" value="Відправити"><br>
+                            <div class="agree">
+                                <img src="/icon/icons8-checkbox-50.png" height="15px" alt="">
+                                <span>Даю згоду на оброблення персональних даних</span>
+                            </div>
+                    </div>
+                </div>
+            </div>
+            <div class="input-right">
+                <img src="/image/Rectangle 6.png" width="800px" height="696px">
             </div>
         </div>
     </div>
