--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
             </div>
         </div>
         <div class="advanteges">
-            <img src="/image/Rectangle 16.png" alt="" srcset="">
             <div class="advanteges-title">
                 <span>Наші переваги</span>
             </div>
             <div class="advanteges-body">
                 <div class="advanteges-line">
                     <div class="line-side_left">
-                        <span>01</span>
+                    <img src="/image/Rectangle 17-2.png" alt="" srcset="">
+                    <span>01</span>
                     </div>
                     <div class="line-side_right">
                         <div class="line_right-title">
@@ -166,6 +166,7 @@
                 </div>
                 <div class="advanteges-line">
                     <div class="line-side_left">
+                    <img src="/image/Rectangle 17-1.png" alt="" srcset="">
                         <span>02</span>
                     </div>
                     <div class="line-side_right">
@@ -180,6 +181,7 @@
                 </div>
                 <div class="advanteges-line">
                     <div class="line-side_left">
+                    <img src="/image/Rectangle 16.png" alt="" srcset="">
                         <span>03</span>
                     </div>
                     <div class="line-side_right">
@@ -193,6 +195,7 @@
                 </div>
                 <div class="advanteges-line">
                     <div class="line-side_left">
+                    <img src="/image/Rectangle 18.png" alt="" srcset="">
                         <span>04</span>
                     </div>
                     <div class="line-side_right">
@@ -206,6 +209,7 @@
                 </div>
                 <div class="advanteges-line ">
                     <div class="line-side_left last">
+                    <img src="/image/Rectangle 18-1.png" alt="" srcset="">
                         <span>05</span>
                     </div>
                     <div class="line-side_right last">
@@ -249,6 +253,83 @@
             <div class="input-right">
                 <img src="/image/Rectangle 6.png" width="800px" height="696px">
             </div>
+        </div>
+        <div class="workStage">
+            <div class="workStage_title">
+                <span>Етапи роботи</span>
+            </div>
+            <div class="workStage_block">
+                <div class="workStage_item">
+                    <div class="workStage_item-nbr">
+                        <span>01</span>
+                    </div>
+                    <div class="workStage_item-title">
+                        <span>Підписання договору</span>
+                    </div>
+                    <div class="workStage_item-text">
+                        <span>Визначаємось з бюджетом, <br> 
+                            матеріалами та фурнітурою. <br>
+                            Вносимо правки в проект, <br>
+                            підписуємо пакет документів.</span>
+                    </div>
+                </div>
+                <div class="workStage_item">
+                    <div class="workStage_item-nbr">
+                        <span>02</span>
+                    </div>
+                    <div class="workStage_item-title">
+                        <span>Виготовлення </span>
+                    </div>
+                    <div class="workStage_item-text">
+                        <span>Після підписання договору та <br>
+                            визначення термінів, команда <br> 
+                            Рінго приступає до <br>
+                            найцікавішого - виробництва!</span>
+                    </div>
+                </div>
+                <div class="workStage_item">
+                    <div class="workStage_item-nbr">
+                        <span>03</span>
+                    </div>
+                    <div class="workStage_item-title">
+                        <span>Встановлення</span>
+                    </div>
+                    <div class="workStage_item-text">
+                        <span>По готовності виробництва <br>
+                              починаємо монтаж на обєкті. <br>
+                               У домовлений час виконуємо <br>
+                                доставку та монтаж.</span>
+                    </div>
+                </div>
+                <div class="workStage_item">
+                    <div class="workStage_item-nbr">
+                        <span>04</span>
+                    </div>
+                    <div class="workStage_item-title">
+                        <span>Новосілля</span>
+                    </div>
+                    <div class="workStage_item-text">
+                        <span>По закінченню робимо <br>
+                             перевірку та підписуємо акт <br>
+                              закінчення робівт. </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="secondSlider">
+            <div class="secondSlider_title"></div>
+            <div class="secSlider slider">
+                <div class="slider__item">
+                    <img src="/image/Rectangle 19.png" width="600px" height="340px" >
+                </div>
+                <div class="slider__item">
+                    <img src="/image/Rectangle 19.png" width="600px" height="340px" >
+                </div>        
+                <div class="slider__item">
+                    <img src="/image/Rectangle 19.png" width="600px" height="340px"  >
+                </div>
+            </div>
+            <div class="underSlider"></div>
         </div>
     </div>
     <div class="footer"></div>
