--- a/index.html
+++ b/index.html
@@ -316,23 +316,146 @@
                 </div>
             </div>
         </div>
-        <div class="secondSlider">
-            <div class="secondSlider_title"></div>
-            <div class="secSlider slider">
-                <div class="slider__item">
+        <div class="secSlider-bigBlock">
+            <div class="secSlider_title"></div>
+            <div class="secSlider">
+                <div class="secSlider__item">
                     <img src="/image/Rectangle 19.png" width="600px" height="340px" >
                 </div>
-                <div class="slider__item">
+                <div class="secSlider__item">
                     <img src="/image/Rectangle 19.png" width="600px" height="340px" >
                 </div>        
-                <div class="slider__item">
+                <div class="secSlider__item">
+                    <img src="/image/Rectangle 19.png" width="600px" height="340px"  >
+                </div>
+                <div class="secSlider__item">
+                    <img src="/image/Rectangle 19.png" width="600px" height="340px" >
+                </div>
+                <div class="secSlider__item">
+                    <img src="/image/Rectangle 19.png" width="600px" height="340px" >
+                </div>        
+                <div class="secSlider__item">
                     <img src="/image/Rectangle 19.png" width="600px" height="340px"  >
                 </div>
             </div>
             <div class="underSlider"></div>
         </div>
+        <div class="gifts-bigBox">
+            <div class="giftCard leftCard">
+                <img src="/image/image 15.png" alt="">
+                <div class="giftCard_text">
+                    <img src="/icon/icons8-gift-32.png" alt="">
+                    <span>Подарунок</span>
+                </div>
+            </div>
+            <div class="giftCard rightCard">
+                <img src="/image/image 16.png" alt="">
+                <div class="giftCard_text">
+                    <img src="/icon/icons8-gift-32.png" alt="">
+                    <span>Подарунок</span>
+                </div>
+            </div>
+            <div class="gifts-block">
+                <div class="gifts-title">
+                    <span>Рінго роздає<br> 
+                        подарунки!</span>
+                </div>
+                <div class="gifts-text">
+                    
+                    <span>При замовленні до нового року, отримай <br> 
+                        цінний подарунок для свого комфорту</span>
+                </div>
+                <div class="gifts-btn">
+                    <input id="btn" type="submit" value="Відправити"><br>
+                </div>
+            </div>
+        </div>
+        <div class="ourPartner">
+            <div class="ourPartner_title">
+                <span>Наші партнери</span>
+            </div>
+            <div class="ourPartner_slider">
+                    <div class="ourPartner_slider__item">
+                        <img src="/image/image 8.png" width="152px" height="48px" >
+                    </div>
+                    <div class="ourPartner_slider__item">
+                        <img src="/image/image 9.png" width="152px" height="48px" >
+                    </div>        
+                    <div class="ourPartner_slider__item">
+                        <img src="/image/image 10.png" width="152px" height="48px"  >
+                    </div>
+                    <div class="ourPartner_slider__item">
+                        <img src="/image/image 11.png" width="152px" height="48px" >
+                    </div>
+            </div>
+        </div>
+        <div class="input-block_2">
+            <div class="input-left">
+                <div class="input_container">
+                    <div class="input_container-title">
+                        <span>Залишилися питання?</span>
+                    </div>
+                    <div class="input_container-subTitle">
+                        <span>Отримай безкоштовну консультацію менеджера та прорахунок проекту </span>
+                    </div>
+                    <div class="input_form">
+                            <input  id= "name" type="text" name="firstname" value="Ім'я"><br>
+                            <input id= "phone" type="text" name="lastname" value="Номер телефону"><br>
+                            <input id="btn" type="submit" value="Відправити"><br>
+                            <div class="agree">
+                                <img src="/icon/icons8-checkbox-50.png" height="15px" alt="">
+                                <span>Даю згоду на оброблення персональних даних</span>
+                            </div>
+                    </div>
+                </div>
+            </div>
+            <div class="input-right">
+                <img src="/image/photo-1.png" width="800px" height="696px">
+            </div>
+        </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div class="footer-big">
+            <div class="footer-big_left">
+                <div class="footer-big_left_top">
+                    <img src="" alt="">
+                </div>
+                <div class="footer-big_left_bottom">
+                    <span></span>
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="footer-big_center">
+                <div class="footer-big_center_left">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="footer-big_center_right">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <div class="footer-big_right">
+                <div class="footer-big_right_top">
+                    <img src="" alt="">
+                    <span></span>
+                </div>
+                <div class="footer-big_right_bottom">
+                    <input id="btn" type="submit" value="Відправити"><br>
+                </div>
+            </div>
+        </div>
+        <div class="footer-midlle">
+            <div class="footer-midlle_title"></div>
+            <div class="footer-midlle_sponsor"></div>
+        </div>
+        <div class="footer-small">
+            <span></span>
+            <span></span>
+        </div>
+    </div>
 </body>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="/slick.min.js"></script>
