--- a/index.html
+++ b/index.html
@@ -418,29 +418,29 @@
         <div class="footer-big">
             <div class="footer-big_left">
                 <div class="footer-big_left_top">
-                    <img src="" alt="">
+                    <img src="/icon/logo.svg" alt="">
                 </div>
                 <div class="footer-big_left_bottom">
-                    <span></span>
-                    <img src="" alt="">
+                    <span>Соцмережі:</span>
+                    <img src="/icon/Ми в соцмережах_.png" alt="">
                 </div>
             </div>
             <div class="footer-big_center">
                 <div class="footer-big_center_left">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <span>Основні напрямки</span>
+                    <span>Про компанію</span>
+                    <span>Переваги</span>
                 </div>
                 <div class="footer-big_center_right">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <span>Етапи роботи</span>
+                    <span>Зараз в роботі</span>
+                    <span>Стати партнером</span>
                 </div>
             </div>
             <div class="footer-big_right">
                 <div class="footer-big_right_top">
-                    <img src="" alt="">
-                    <span></span>
+                    <img src="/icon/Vector.png" alt="">
+                    <span>+380 67661 5415</span>
                 </div>
                 <div class="footer-big_right_bottom">
                     <input id="btn" type="submit" value="Відправити"><br>
@@ -448,12 +448,22 @@
             </div>
         </div>
         <div class="footer-midlle">
-            <div class="footer-midlle_title"></div>
-            <div class="footer-midlle_sponsor"></div>
+            <div class="footer-midlle_title">Бренди комплектуючих</div>
+            <div class="footer-midlle_sponsor">
+                <img src="/image/image 8.png" alt="">
+                <img src="/image/image 9.png" alt="">
+                <img src="/image/image 10.png" alt="">
+                <img src="/image/image 11.png" alt="">
+                <img src="/image/Vector.png" alt="">
+                <img src="/image/main-logo 1.png" alt="">
+                <img src="/image/pngegg (1) 1.png" alt="">
+                <img src="/image/pngegg (2) 1.png" alt="">
+                <img src="/image/pngegg 1.png" alt="">
+            </div>
         </div>
         <div class="footer-small">
-            <span></span>
-            <span></span>
+            <span>© 2021 Ringo</span>
+            <span>Дизайн сайту</span>
         </div>
     </div>
 </body>
